# plataforma-finetunning

./: .dockerignore  .gitignore  PDA-716.md  README.md  pyproject.toml
configs/: config.yaml  reranker.yaml
configs/dataset/: example-chat.yaml  greenlegis-condicoes-v2.yaml  greenlegis-condicoes-v3.yaml  greenlegis-condicoes-v4.yaml  greenlegis-condicoes-v5.yaml  greenlegis-condicoes-v6.yaml  greenlegis-condicoes.yaml
configs/evaluation/: default.yaml
configs/experiment/: default.yaml
configs/export/: gguf.yaml  ollama.yaml
configs/hardware/: auto.yaml
configs/logging/: default.yaml
configs/lora/: lora.yaml  qlora.yaml
configs/model/: qwen3-0.6b.yaml
configs/optimizer/: adamw.yaml  paged_adamw_8bit.yaml
configs/scheduler/: cosine.yaml  linear.yaml
configs/tokenizer/: default.yaml
configs/training/: sft.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  comparativo-abordagens-pda-716.md  pesquisa-plataformas-treinamento-cloud.md  planejamento-adequacao-fluxo-producao.md  poc-pda-716.md  proximos-passos-melhoria-modelo.md
scripts/: build_poc_dataset.py  build_poc_dataset_v2.py  build_poc_dataset_v3.py  build_poc_dataset_v4.py  build_poc_dataset_v5.py  build_reranker_dataset.py  evaluate_poc.py  evaluate_poc_api.py  evaluate_poc_candidates.py  export_greenlegis_raw.js  export_greenlegis_raw_v2.py  finalize_reranker_from_checkpoint.py  generate_example_dataset.py  inspect_greenlegis_schema.js  knn_retrieval.py  recover_reranker_checkpoint.py  run_api_eval.sh  setup_llamacpp.sh
src/finetuning/: __init__.py
tests/: conftest.py
tests/fixtures/: reranker_pairs_smoke.jsonl
tests/integration/: test_download_model_integration.py  test_train_reranker_smoke.py  test_train_smoke.py
tests/unit/: test_build_reranker_dataset.py  test_cli.py  test_compare_experiments.py  test_config.py  test_dataset_pipeline.py  test_download_model.py  test_environment.py  test_evaluate_reranker_model.py  test_evaluation.py  test_experiment_manager.py  test_export.py  test_hardware.py  test_hashing.py  test_hierarchical_f1.py  test_knn_retrieval.py  test_pair_dataset.py  test_poc_api.py  (+10 more)
(+62 files in other folders)
