[project]
name = "finetuning"
version = "0.1.0"
description = "Local LLM fine-tuning platform: HF models, CUDA training, Ollama export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "transformers>=4.51",
    "trl>=0.17",
    "peft>=0.15",
    "bitsandbytes>=0.45",
    "accelerate>=1.6",
    "datasets>=3.5",
    "safetensors>=0.5",
    "sentencepiece>=0.2",
    "mlflow>=2.21",
    "tensorboard>=2.19",
    "typer>=0.15",
    "hydra-core>=1.3.2",
    "pydantic>=2.10",
    "loguru>=0.7.3",
    "rich>=13.9",
    "polars>=1.25",
    "pyyaml>=6.0.2",
    "nvidia-ml-py>=12.0",
    "gguf>=0.10",
    "hf-transfer>=0.1",
    "psutil>=7.0",
    "matplotlib>=3.10",
    "sentence-transformers>=4.0",
    "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "black>=25.1",
    "mypy>=1.15",
    "types-pyyaml>=6.0",
]

[project.scripts]
ft = "finetuning.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finetuning"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["finetuning"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration and not slow and not gpu'"
markers = [
    "gpu: requires a CUDA-capable GPU",
    "integration: touches network or heavy resources",
    "slow: long-running test",
]
